--- a/templates/user6.rules.j2
+++ b/templates/user6.rules.j2
@@ -21,9 +21,9 @@
 -A ufw6-user-input -p udp --dport {{ port }} -j ACCEPT
 
 {% endfor %}
-{% for ip in ufw_whitelisted_ipv6_addresses %}
-### tuple ### allow any any ::/0 any {{ ip }} in
--A ufw6-user-input -s {{ ip }} -j ACCEPT
+{% for tuple in ufw_whitelisted_ipv6_addresses %}
+### tuple ### allow {{ tuple.protocol }} {{ tuple.port }} ::/0 any {{ tuple.address }} in
+-A ufw6-user-input -p {{ tuple.protocol }} --dport {{ tuple.port }} -s {{ tuple.address }} -j ACCEPT
 
 {% endfor %}
 ### END RULES ###
