--- a/templates/user6.rules.j2
+++ b/templates/user6.rules.j2
@@ -15,10 +15,9 @@
 :ufw6-logging-allow - [0:0]
 ### RULES ###
 
-{% for port in ufw_whitelisted_ports %}
-### tuple ### allow any {{ port }} ::/0 any ::/0 in
--A ufw6-user-input -p tcp --dport {{ port }} -j ACCEPT
--A ufw6-user-input -p udp --dport {{ port }} -j ACCEPT
+{% for item in ufw_whitelisted_ports %}
+### tuple ### allow {{ item.protocol}} {{ item.port }} ::/0 any ::/0 in
+-A ufw6-user-input -p {{ item.protocol }} --dport {{ item.port }} -j ACCEPT
 
 {% endfor %}
 {% for tuple in ufw_whitelisted_ipv6_addresses %}
